# freedom-theory-ai

./: .gitignore  ARCHITECTURE.md  PROOFS.md  README.md  SECURITY.md  TCB.md  THREAT_MODEL.md
.github/workflows/: book-pdf.yml  ci.yml
book/: theory_of_freedom_complete_en.md
book_source/: ai_chapter_raw_persian.txt
examples/: multi_agent.py  openai_integration.py
formal/: FreedomKernel.lean  freedom_kernel.tla
freedom-kernel/: Cargo.toml  pyproject.toml
freedom-kernel/src/: engine.rs  entities.rs  ffi.rs  kani_proofs.rs  lib.rs  registry.rs  verifier.rs  wasm.rs
src/freedom_theory/: __init__.py
src/freedom_theory/adapters/: __init__.py  anthropic.py  autogen.py  langchain.py  openai_agents.py
src/freedom_theory/api/: app.py
src/freedom_theory/extensions/: __init__.py  compass.py  detection.py  resolver.py  synthesis.py
src/freedom_theory/kernel/: __init__.py  _pure.py  capability.py  entities.py  policy.py  registry.py  verifier.py
tests/: test_adapters.py  test_capability.py  test_compass.py  test_context.py  test_core.py  test_delegate.py  test_dialectical.py  test_plan_goals.py  test_policy.py  test_synthesis_resolver.py
